--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "discord_bot_the_villager",
   "version": "1.0.0",
   "description": "A discord bot to help friends do activities online together.",
-  "main": "app.js",
+  "main": "bot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
